--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"); */
 
 :root {
   --textColor: #6c757d;
@@ -32,8 +32,8 @@ body {
   padding-right: 40px;
   font-family: var(--fontLato);
 
-  background-image: url("../img/0.jpeg");
-  background-position: center center;
+  background-image: url("../images/0.jpeg");
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   color: #e2e2e2;
@@ -55,7 +55,7 @@ body:before {
 }
 
 body * {
-  z-index: 1;
+  z-index: 2;
 }
 
 .new_year {
@@ -65,7 +65,7 @@ body * {
   background: rgba(10, 6, 6, 0.9);
   color: #e2e2e2;
   letter-spacing: 0.5px;
-  z-index: -1;
+  z-index: 1;
   position: absolute;
   bottom: 0;
   left: 0;
